fix: 统一配置文件中的 server-id 为 node-id，修正相关文档描述

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ zlm:
   hook-enable: true
   balance: round_robin
   nodes:
-    - server-id: "zlm"
+    - node-id: "zlm"
       host: "http://127.0.0.1"
       secret: your_secret
 
